--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,15 +4,17 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-   "dev":"nodemon src/app.js",
+    "dev": "nodemon src/app.js",
     "start": "node src/app.js",
-    "prod":"pm2 src/app.js"
+    "prod": "pm2 src/app.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
     "mongoose": "^8.15.1",
